去掉jcs